--- a/okr-app/app/config.json
+++ b/okr-app/app/config.json
@@ -2,10 +2,21 @@
   "appsScript" : {
     "scopes" : [
       "https://www.googleapis.com/auth/spreadsheets",
-      "https://www.googleapis.com/auth/userinfo.email"
+      "email",
+      "profile"
     ],
     "scriptId" : "1NCMLaOkpxikj2vmJ97N9gkpNskokhdMtKDruVBN2_aC-Bp01V_aaVbaZ",
     "version" : "v1"
+  },
+
+  "auth" : {
+    "google" : {
+      "clientID":
+        "1065784269880-ngu6n7ntnedfdqab3387orjusqqa35a5.apps.googleusercontent.com",
+      "clientSecret":
+        "cmpYS8Pob-kauQvkOgxQ2g5q",
+      "callbackURL": "http://127.0.0.1:8080/auth/google/callback"
+    }
   },
 
 	"development": {
